--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,13 @@ form button:hover {
   background-color: #0056b3;
 }
 
+/* Deixando o conteudo centralizado na pagina */
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+}
+
